--- a/chrome_extension/_locales/en/messages.json
+++ b/chrome_extension/_locales/en/messages.json
@@ -4,5 +4,8 @@
   },
   "extDescription": { 
     "message": "Tool to output multiple pages into PDF that can be followed by links from pages in the browse page."
+  },
+  "convert": { 
+    "message": "Convert to PDF"
   }
 }
