--- a/chrome_extension/_locales/en/messages.json
+++ b/chrome_extension/_locales/en/messages.json
@@ -8,6 +8,9 @@
   "endBtn": {
     "message": "Select End"
   },
+  "clearBtn": {
+    "message": "Cancel All"
+  },
   "convert": { 
     "message": "Convert to PDF"
   }
